fix: card button spacing fixed

--- a/components/common/filters/filterDropdown/style.module.scss
+++ b/components/common/filters/filterDropdown/style.module.scss
@@ -93,6 +93,7 @@
 			.filterBtnCols{
 				border-top: 1px solid $gray-8;
 				margin-top: 10px;
+				padding: 15px 15px 10px;
 			}
 		}
 	}
